Fix z-index

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -237,7 +237,7 @@
     left: 50%
     top: 50%
     transform: translate(-50%,-50%)
-    z-index: 100
+    z-index: 10
 
 
 .instagram
